app/style/main.css
/*
 * ==========================================================================
 * Font Importing
 * ==========================================================================
 */

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/OpenSans-Light.ttf') format('truetype');
}

/*
 * ==========================================================================
 * Common Elements Styling
 * ==========================================================================
 */

body {
	font-weight: lighter;
	font-family: 'Open Sans', sans-serif;
}

section {
	display: none;
	height: 100vh;
	max-height: 100vh;
	width: 100vw;
	overflow-y: scroll;
	overflow-x: hidden;
}

section.active {
	display: block;
}

button {
	cursor: pointer;
}

button:focus {
    text-decoration: none;
}

ul {
	margin: 0;
	padding: 0;
}

iframe,
embed,
object,
img,
.video-wrapper {
	max-width: 50%;
	max-height: 50%;
}

table,
code {
	overflow-x: scroll;
	max-width: 100%;
}

tr,
td {
	padding: 0.5em;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: lighter;
	line-height: normal;
}

b {
	font-weight: bold;
}

::-webkit-scrollbar {
    background: transparent;
	width: 6px;
}

::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.2);
}

[data-action='local-image'] {
	margin: 0 auto;
}

/*
 * ==========================================================================
 * Navigation Styling
 * ==========================================================================
 */

.side-nav {
    height: 100%;
    width: 100%;
    float: left;
	position: fixed;
    text-align: center;
	overflow-x: hidden;
    overflow-y: scroll;
	display: none;
	z-index: 11;
}

.side-nav.active {
	display: block;
}

.side-nav h3 {
    padding-top: 0.5em;
}

.top-nav li,
.top-nav button,
.side-nav li,
.side-nav button {
	padding: 1em;
	cursor: pointer;
	background: transparent;
}

.side-nav li,
.side-nav button {
	display: block;
}

.top-nav li,
.top-nav button {
	display: inline-block;
}

.top-nav {
	width: 100%;
	position: relative;
	overflow: hidden;
	text-align: left;
	z-index: 10;
}

.top-nav li[data-action='update'] {
	display: none;
}

.logo {
	margin: 0;
	padding: 1em;
	padding-bottom: 0;
}

.menu-icon {
	display: inline-block;
	position: absolute;
	padding: 1em;
	z-index: 12;
}

[data-content='notebook-list'] {
	text-align: left;
}

/*
 * ==========================================================================
 * View Elements Styling
 * ==========================================================================
 */

[data-view='login'] {
	background: #34aadc;
	color: #fff;
}

[data-view='login'] .row {
	background: #fff;
	color: #424242;
}

[data-view='login'] p {
	font-size: 120%;
}

[data-view='login'] .row .col:first-child,
[data-view='share'] .row .col:first-child {
	border-right: 1px solid rgba(66,66,66,0.5);
}

[data-view='login'] img {
	height: 5em;
	width: 5em;
	margin-top: 4em;
	drag: none;
	user-drag: none;
}

[data-view='login'] h1,
[data-view='login'] h2,
[data-view='share'] h2 {
	font-weight: bold;
}

[data-view] .middle {
	width: 100%;
	max-height: 100vh;
	text-align: center;
}

[data-view="editor"] .side-nav button {
	display: inline-block;
}

[data-view="editor"] .top-nav ul,
[data-view="preview"] .top-nav ul {
	text-align: right;
}

[data-view="notes"] ul {
	text-align: center;
}

[data-view='loading'] img {
	width: 30%;
	height: 30%;
}

[data-view='key'] h1,
[data-view='settings'] h1,
[data-view='login'] h1,
[data-view='decrypt'] h1,
[data-view='new-notebook'] h1,
[data-view='export-note'] h1,
[data-view='edit-notebook'] h1,
[data-view='delete-notebook'] h1,
[data-view='share'] h1{
	font-size: 4em;
	text-align: center;
	margin-bottom: 0;
}

/*
 * ==========================================================================
 * Modal/Form Elements Styling
 * ==========================================================================
 */

[data-modal] {
	display: none;
	text-align: center;
	z-index: 12;
	width: 100vw;
	height: 100vh;
	position: absolute;
}

[data-modal].active {
	display: block;
}

[data-modal] [data-form] {
	top: 50%;
    left: 50%;
	-webkit-transform: translate(-50%,-50%);
	-moz-transform: translate(-50%,-50%);
	-o-transform: translate(-50%,-50%);
	-ms-transform: translate(-50%,-50%);
	position: absolute;
	padding: 2em;
	border-radius: 4px;
}

[data-form] textarea {
	min-width: 50vw;
	min-height: 30vh;
	resize: both;
}

[data-form] input,
[data-form] select,
[data-form] textarea {
	margin: 0.7em auto;
	padding: 0.5em;
	border: 0;
	outline: 0;
	border-radius: 3px;
}

[data-form]input[type="text"] {
    font-size: 13px;
    padding: 8px;
}

[data-form] button,
[data-form] select {
    -moz-appearance: none;
    -webkit-appearance: none;
    border-radius: 3px;
    cursor: pointer;
    font-family: inherit;
    font-size: 16px;
    margin: 24px auto;
    outline: none;
    padding: 16px 32px;
    text-align: center;
    text-decoration: none;
    transition: all 100ms ease-in;
}

/*
 * ==========================================================================
 * Note List Elements Styling
 * ==========================================================================
 */

.grid {
    text-align: center;
}

.grid article {
    width: 10em;
    max-width: 10em;
    display: inline-block;
    margin: 0.5em;
    word-break: break-word;
    text-align: left;
    padding: 1em;
    height: 10em;
    max-height: 10em;
    vertical-align: middle;
    position: relative;
	overflow: hidden;
}

.grid article h2 {
    margin-bottom: 0.2em;
    font-size: 1.2em;
}

.grid article .note-actions {
    text-align: center;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
}

.grid .note-actions .fa {
    vertical-align: middle;
    cursor: pointer;
    padding: 1em;
}

[data-content='note-container'] {
    width: 100%;
    height: auto;
    float: right;
    padding: 1em;
}

[data-content='welcome']{
	position: relative;
}

/*
 * ==========================================================================
 * Editor and Preview Elements Styling
 * ==========================================================================
 */

#editor,
#preview {
	width: 100%;
	height: 100%;
	padding: 2em;
	padding-top: 0;
    outline: none;
    line-height: 1.5em;
	margin-bottom: 1em;
}

#preview {
	margin: 0 auto;
}

#editor ul,
#editor ol,
#preview ul,
#preview ol {
    padding-left: 1.3em;
}

#preview h1,
#editor h1 {
	margin: 1rem 0;
    font-size: 2rem;
}

#preview h2,
#editor h2 {
	margin: 1rem 0;
    font-size: 1.8rem;
}

#preview h3,
#editor h3 {
	margin: 1rem 0;
    font-size: 1.6rem;
}

#preview h4,
#editor h4 {
	margin: 1em 0;
    font-size: 1.4rem;
}

#preview h5,
#editor h5 {
	margin: 1rem 0;
    font-size: 1.2rem;
}
#preview h6,
#editor h6 {
	margin: 1rem 0;
    margin-bottom: 1rem;
}

.video-wrapper iframe,
.video-wrapper webview{
	max-width: 100%;
	width: 100%;
	max-height: 100%;
	min-height: 30vh;
	min-width: 30vw;
}

/** Place here all Media Queries and it's styles.**/

/** Default Style. Don't change. (320px) **/
@media screen and  (max-width: 20em) {}

/** Extra Small Devices, Phones (480px) **/
@media screen and (min-width : 30em) {

}

/** Medium Screens, Tablets (601px) **/
@media screen and (min-width: 37.56255em) {
	.side-nav {
		display: block;
		width: 30%;
		float: left;
	}

	#editor,
	.wrapper {
		float: right;
		width: 70%;
	}

	.menu-icon {
		display: none;
	}
}

/** Medium Devices, Desktops (992px)**/
@media screen and (min-width: 62em) {
	.side-nav {
		width: 20%;
	}

	#editor,
	.wrapper {
		width: 80%;
	}

	#preview {
		width: 80%;
	}
}

/** HD Screen, Large Devices, Wide Screens (1200px) **/
@media screen and (min-width: 75em) {

}

/** Full HD Screen, Large Devices, Wide Screens (1920px) **/
@media screen and (min-width: 120em) {

}

/** Retina Screen , Large Devices, Wide Screens(2560px) **/
@media screen and (min-width: 160em) {

}

/** 4k Screens, Large Devices, Wide Screens (3840px) **/
@media screen and (min-width: 240em) {

}

/** 5k Screens, Large Devices, Wide Screens (5120px) **/
@media screen and (min-width: 320em) {

}

/** CSS for Printing **/
@media print {

	.top-nav {
		display: none;
	}

	a {
        color: #424242;
    }

	[data-view="preview"] {
		overflow: visible;
	}

    #preview {
        width: 100%;
        float: none;
        overflow: visible;
        padding: 0;
    }

	body{
        overflow: visible;
        font-family: 'Arial', sans-serif;
        font-size: 12pt;
    }

    h1 {
        font-size: 14pt;
        margin: auto;
    }

    h2, h3, h4, h5{
        font-size: 12pt;
        font-weight: bold;
        margin: auto;
    }

    pre {
        overflow: visible;
        max-width: 100%;
        word-break: break-word;
    }

    tr, td {
		border: 1px solid #424242 !important;
		padding: 0.5em;
	}

	hr {
		color: #424242 !important;
	}

    code{
        padding: 0;
    }

    [data-modal] {
        display: none;
    }

    @page {
        size: auto;
        margin: 24.892mm;
    }
}

